--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -1,43 +1,136 @@
----
 title: "Weight of Fish"
-author: "Your Name"
+author: " diana flores " 
 date: "`r Sys.Date()`"  
 output: 
   html_document:
     number_sections: true
     toc: true
     toc_depth: 5
-
- 
-    
 ---
+
 
 
 ```{r include=FALSE,echo=FALSE}
 require(tigerstats)
 require(tidyverse)
+require(leaps)
 ```
 
 # Predicting Fish Weight
+## get data
+```{r}
+fishData=read.csv("Fish.csv")
+```
 
 
 ## Perch
+```{r}
+perch = filter(fishData, Species == "Perch")
+```
 
 ### Best Models
+```{r}
+models = regsubsets(Weight ~ Length1+Length2+Length3+Height+Width, data=perch,
+                    nvmax=5)
+
+summary(models)
+
+res.sum <- summary(models)
+Adj.R2 = which.max(res.sum$adjr2)
+#print(paste("best adjusted r-squared", Adj.R2))
+
+results = data.frame(
+  Adj.R2 = which.max(res.sum$adjr2),
+  CP = which.min(res.sum$cp),
+  BIC = which.min(res.sum$bic)
+)
+print(results)
+
+```
+
+the best two variables to predict weight are height and width.
 
 ### Best Two regressor model
 
+```{r}
+perchModel=lm(Weight~Height+Width,data = perch)
+summary(perchModel)
+```
+For the best model adjust r squared was 0.94.
 
 ## Pike
+```{r}
+pike = filter(fishData, Species == "Pike")
+```
 
 ### Best Models
 
+```{r}
+models = regsubsets(Weight ~ Length1+Length2+Length3+Height+Width, data=pike,
+                    nvmax=5)
+
+summary(models)
+
+res.sum <- summary(models)
+Adj.R2 = which.max(res.sum$adjr2)
+#print(paste("best adjusted r-squared", Adj.R2))
+
+results = data.frame(
+  Adj.R2 = which.max(res.sum$adjr2),
+  CP = which.min(res.sum$cp),
+  BIC = which.min(res.sum$bic)
+)
+print(results)
+
+```
+
+The best two variables for pike is length 1 and length 3.
+
 ### Best Two regressor model
+
+```{r}
+pikemodel=lm(Weight~Length1+Length3, data=pike)
+summary(pikemodel)
+```
+
+The best model for adjusted r squared is 0.9649
 
 ## Roach
+```{r}
+Roach = filter(fishData, Species == "Roach")
+```
+
 
 ### Best Models
 
+```{r}
+models = regsubsets(Weight ~ Length1+Length2+Length3+Height+Width, data=Roach,
+                    nvmax=5)
+
+summary(models)
+
+res.sum <- summary(models)
+Adj.R2 = which.max(res.sum$adjr2)
+#print(paste("best adjusted r-squared", Adj.R2))
+
+results = data.frame(
+  Adj.R2 = which.max(res.sum$adjr2),
+  CP = which.min(res.sum$cp),
+  BIC = which.min(res.sum$bic)
+)
+print(results)
+
+```
+
+the best two variables for roach and length3 and width.
+
 ### Best Two regressor model
+```{r}
+Roachmodel=lm(Weight~Length3+Width, data=Roach)
+summary(Roachmodel)
+```
+The best model for the adjusted r squared is 0.8482.
 
 ## Final Summary Statements
+
+Looking at datat collected by all three models from lowest to highest. Roach being 0.8482 then perch at 0.94 and pike at 0.96.This is concluding that pike is the best model of the 3 since it was the highest value.
